[package]
name = "rlocate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.11"
mountpoints = "0.2.1"
regex = "1.10.2"
rusqlite = { version = "0.30.0", features = ["bundled", "functions"] }
spinners = "4.1.1"
walkdir = "2.4.0"
